# autosbatch

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  cmd.sh  coverage.xml  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
autosbatch/: __init__.py  autosbatch.py  cli.py  logger.py
autosbatch/template/: CPU_MPI.j2  CPU_OpenMP.j2
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_autosbatch.py  test_cli.py  test_logger.py
usage/: index.html
